# python-tails

./: .gitignore  main.py  pyproject.toml  pytest.ini
oop/: category.py
oop/src/: Smartphone.py  ZeroQuantityError.py  abc_base.py  category.py  category_iteration.py  grass.py  mixin.py  order.py  product.py  smartphone.py
oop/tests/: conftest.py  test_category.py  test_product.py
