[tool.poetry]
name = "python-tails"
version = "0.1.0"
description = ""
authors = ["Sprite_Spirit <Sprite.spirit.t.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
